# jet

./: .gitignore  ATTRIBUTIONS.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LANG.md  LICENSE  LICENSE.txt  README.md  WHY_JET.txt  main.cpp  test.txt
.github/ISSUE_TEMPLATE/: jet----bug-report.md
.github/workflows/: build.yml  cmake.yml  codeql-analysis.yml  linux.yml  macos.yml  windows.yml
build-debug/: .ninja_deps  .ninja_log  build.ninja  nextgen  rules.ninja
build-debug/.cmake/api/v1/reply/: cache-v2-61c181a9c19b63e12a01.json  cmakeFiles-v1-c36291c7bb62b7738c44.json  codemodel-v2-47adda0db94ebd5eeb74.json  index-2021-05-02T22-41-17-0194.json  target-nextgen-Debug-a5e6c79fa5593bff4a76.json
build-release/: build.ninja  rules.ninja
build-release/.cmake/api/v1/reply/: cache-v2-c1bea4d155c963ac382e.json  cmakeFiles-v1-d988da42006fded24f28.json  codemodel-v2-97b026a82a0a3258f16a.json  index-2021-05-02T22-41-17-0201.json  target-nextgen-Release-5f360d140d510df928d3.json
import/nextgen/: allocator.h  cl.h  core-util.h  io.h  os-config.h  panic.h  str.h
import/nextgen/Support/: Allocator.h  Config.h  Core.h  IO.h  None.h  Panic.h  String.h
import/nextgen/jet/: Diagnostics.h  jet-analyzer.h  jet-ast.h  jet-cgen.h  jet-diagnostics.h  jet-lexer.h  jet-parser.h  jet-syntax-nodes.h  jet-token.h  jet-x64-assembler.h
import/nextgen/jet/Lex/: Lexer.h  Token.h
import/nextgen/jet/Parse/: Parser.h  SyntaxNodes.h
import/nextgen/jet/lex/: lexer.h  token.h
import/nextgen/lex/: lexer.h  token.h
import/nextgen/support/: allocator.h  config.h  core.h  io.h  none.h  panic.h  str.h
lib/: Diagnostics.cpp  allocator.cpp  cl.cpp  io.cpp  jet-analyzer.cpp  jet-cgen.cpp  jet-diagnostics.cpp  jet-lexer-v1.cpp  jet-lexer-v2.cpp  jet-parser.cpp  jet-x64-assembler.cpp  panic.cpp  str.cpp
lib/Lex/: Lexer.cpp
lib/Parse/: Parser.cpp
lib/Support/: Allocator.cpp  IO.cpp  Panic.cpp  String.cpp
lib/lex/: lexer.cpp
lib/support/: allocator.cpp  io.cpp  panic.cpp  str.cpp
src/: allocator.cpp  allocator.h  analyzer.cpp  analyzer.h  c-codegen.cpp  c-codegen.h  diagnostics.cpp  diagnostics.h  lexer.cpp  lexer.h  parser.cpp  parser.h  x64-codegen.cpp  x64-codegen.h
src/types/: analyzer-types.h  error-types.h  lexer-types.h  parser-types.h
src/util/: cl.h  config.h  io.h  misc.h  panic.h  str.cpp  str.h  system.h
tests/: CMakeLists.txt  lex-test.cpp  parse-test.cpp  test-main.cpp  x64-test.cpp
tests/Lex/: LexTest.cpp
tests/Parse/: ParseTest.cpp
tests/Support/: ListTest.cpp
tests/lang/: lexer_demo.jet  syntax.jet
tests/lex/: LexTest.cpp
tests/support/: ListTest.cpp
